--- a/MechatronicsProject/src/UserInterface/UI.form
+++ b/MechatronicsProject/src/UserInterface/UI.form
@@ -9,11 +9,11 @@
     </Property>
     <Property name="name" type="java.lang.String" value="jFrameHome" noResource="true"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[605, 350]"/>
+      <Dimension value="[640, 380]"/>
     </Property>
     <Property name="resizable" type="boolean" value="false"/>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[600, 350]"/>
+      <Dimension value="[640, 380]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -48,7 +48,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="jTabbedPane1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace pref="56" max="32767" attributes="0"/>
               <Component id="exitButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
